# chuffed

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
chuffed/core/: engine.cpp  options.cpp  options.h  stats.c
chuffed/flatzinc/: flatzinc.c  fzn_chuffed.cpp  registry.cpp
chuffed/globals/: cumulative.cpp  disjunctive.c  disjunctive.cpp  regular.cpp
chuffed/mdd/: MDD.c  MDD.h  mdd_prop.c  mdd_prop.cpp  mdd_to_lgraph.cpp  weighted_dfa.h
chuffed/mip/: recalc.c
chuffed/primitives/: arithmetic.c
chuffed/vars/: int-var.cpp
trunk/: CMakeLists.txt  chuffed.sh  make-linux-portable.sh  make-mac-portable.sh  update-version.sh
trunk/chuffed/core/: conflict.c  engine.c  engine.h  init.c  options.c  options.h  sat-types.h  sat.c  sat.h  stats.c
trunk/chuffed/flatzinc/: flatzinc.c  flatzinc.h  fzn_chuffed.c  lexer.yy.c  parser.tab.c  parser.yxx  registry.c
trunk/chuffed/globals/: alldiff.c  cumulative.c  cumulativeCalendar.c  disjunctive.c
trunk/chuffed/mdd/: MDD.h
trunk/chuffed/vars/: bool-view.h  int-var-el.c  int-var-ll.c  int-var.c  int-var.h
trunk/cpp-integration/: connector.cpp  connector.hh
